# DjangoRF-API

blogs/: README.md  db.sqlite3  pyproject.toml
blogs/blogs/: asgi.py  settings.py  urls.py  wsgi.py
blogs/posts/: admin.py  models.py  urls.py  views.py
blogs/posts/migrations/: 0001_initial.py
